<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_chevron_left_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTitleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="Value" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/task_start_date"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@id/endDateLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskTitleLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="Value" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnClearStartDate"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="@id/startDateLayout"
            app:layout_constraintEnd_toEndOf="@id/startDateLayout"
            app:layout_constraintTop_toTopOf="@id/startDateLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/task_end_date"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/startDateLayout"
            app:layout_constraintTop_toBottomOf="@id/taskTitleLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="Value" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnClearEndDate"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="@id/endDateLayout"
            app:layout_constraintEnd_toEndOf="@id/endDateLayout"
            app:layout_constraintTop_toTopOf="@id/endDateLayout" />

        <include
            android:id="@+id/dmStatus"
            layout="@layout/dropdown_menu_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/dmPriority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startDateLayout" />

        <Button
            android:id="@+id/btnClearStatus"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="@id/dmStatus"
            app:layout_constraintEnd_toEndOf="@id/dmStatus"
            app:layout_constraintTop_toTopOf="@id/dmStatus" />

        <include
            android:id="@+id/dmPriority"
            layout="@layout/dropdown_menu_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dmStatus"
            app:layout_constraintTop_toBottomOf="@id/endDateLayout" />

        <Button
            android:id="@+id/btnClearPriority"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="@id/dmPriority"
            app:layout_constraintEnd_toEndOf="@id/dmPriority"
            app:layout_constraintTop_toTopOf="@id/dmPriority" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/task_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dmStatus">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="20"
                tools:text="Value" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flat_assign"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/asigneesBtnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGeneral">

            <Button
                android:id="@+id/btnAsignee1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat_assignee_1" />

            <Button
                android:id="@+id/btnAsignee2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat_assignee_2" />

            <Button
                android:id="@+id/btnAsignee3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat_assignee_3" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="16dp"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/baseline_save_24" />
</androidx.constraintlayout.widget.ConstraintLayout>